# X8-CanTesting

./: CMakeLists.txt  Makefile  Makefile~  README.md  canbus.c  canbus.d  canbus.h  leds.d  main.c  main.d  uart.c  uart.d  uart.h
Src/: ethernetif.d  lwip.c  lwip.d  stm32f4xx_hal_msp.d  stm32f4xx_it.d
